chore: .idea 디렉토리 gitignore 적용

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,7 @@ gradle
 !**/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
