--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'planting'
-include 'config-service', 'eureka-service', 'gateway-service'
+include 'auth-service','config-service', 'eureka-service', 'gateway-service'
 
