--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Gradle 권한 추가
+        run: chmod +x ./gradlew
+
       - name: 캐싱
         uses: actions/cache@v3
         with:
