--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
+    id 'checkstyle'
 }
 
 allprojects {
@@ -12,6 +13,11 @@ allprojects {
 
 test {
     useJUnitPlatform()
+}
+
+checkstyle {
+    toolVersion = "10.9"
+    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
 }
 
 subprojects {
