--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /usr/src/app
 
 ARG JAR_PATH=./build/libs
 
-COPY ${JAR_PATH}/demo-0.0.1-SNAPSHOT.jar ${JAR_PATH}/demo-0.0.1-SNAPSHOT.jar
+COPY ${JAR_PATH}/auth-service-0.0.1-SNAPSHOT.jar ${JAR_PATH}/auth-service-0.0.1-SNAPSHOT.jar
 
-CMD ["java","-jar","./build/libs/demo-0.0.1-SNAPSHOT.jar"]
+CMD ["java","-jar","./build/libs/auth-service-0.0.1-SNAPSHOT.jar"]
