--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,4 +1,9 @@
-FROM openjdk:17-jdk-slim
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM openjdk:17-alpine
+
+WORKDIR /usr/src/app
+
+ARG JAR_PATH=./build/libs
+
+COPY ${JAR_PATH}/gateway-service-0.0.1-SNAPSHOT.jar ${JAR_PATH}/gateway-service-0.0.1-SNAPSHOT.jar
+
+CMD ["java","-jar","./build/libs/gateway-service-0.0.1-SNAPSHOT.jar"]
