--- a/plan-service/src/main/resources/application-test.yml
+++ b/plan-service/src/main/resources/application-test.yml
@@ -12,3 +12,7 @@ spring:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
     password:
+
+  sql:
+    init:
+      mode: never
