--- a/plan-service/src/test/resources/application.yml
+++ b/plan-service/src/test/resources/application.yml
@@ -4,6 +4,30 @@ spring:
       enabled: false
     config:
       enabled: false
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+    username: sa
+    password:
+  sql:
+    init:
+      mode: never
 eureka:
   client:
     enabled: false
+mail:
+  smtp:
+    host: smtp.test.com
+    port: 0000
+    auth: false
+    ssl:
+      trust: smtp.test.com
+      enable: false
+    starttls:
+      enable: false
+  username: sa
+  password: 00
