--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ application-local.yml
 application-docker.yml
 /.env
 
+id_ed25519
+known_hosts
+
 .gradle
 !gradle/wrapper/gradle-wrapper.jar
 !**/**/build/
