--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ application-local.yml
 application-docker.yml
 /.env
 
-id_ed25519
-known_hosts
+config-service/id_ed25519
+config-service/known_hosts
 
 .gradle
 !gradle/wrapper/gradle-wrapper.jar
