--- a/auth-service/src/test/resources/application.yml
+++ b/auth-service/src/test/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
+    format_sql: true
     database-platform: org.hibernate.dialect.H2Dialect
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
@@ -37,3 +38,7 @@ eureka:
   client:
     enabled: false
 
+# TODO 해당 설정 TIL에 기록해두기. 인터넷에 무슨 안되는 글이 너무 많음...
+logging:
+  level:
+    org.hibernate.orm.jdbc.bind: trace
