--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
+
     // jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
