--- a/plan-service/src/test/resources/application.yml
+++ b/plan-service/src/test/resources/application.yml
@@ -30,3 +30,12 @@ mail:
     enable: false
   username: sa
   password: 00
+
+
+# Swagger 설정
+openapi:
+  service:
+    title: 인증서버 Local
+    version: 1.0.0
+    url: http://gateway-service:8080
+    description: Planting 서버 중 플랜 서버(프로필 로컬)의 API 명세입니다
