--- a/plan-service/src/test/resources/application.yml
+++ b/plan-service/src/test/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  profiles:
+    active: test
+  data:
+    redis:
+      host: localhost
+      port: 6379
   cloud:
     bus:
       enabled: false
