--- a/plan-service/build.gradle
+++ b/plan-service/build.gradle
@@ -4,14 +4,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.sun.mail:javax.mail:1.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    testImplementation 'org.projectlombok:lombok:1.18.28'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'it.ozimov:embedded-redis:0.7.2'
 
     // https://springdoc.org/
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
